Whitelist themes in CSP of chrome://newtab

BUG=617499

Review-Url: https://codereview.chromium.org/2040903002
Cr-Commit-Position: refs/heads/master@{#398321}

Former-commit-id: 4d6c38c4ea96577313566d1f0ba4b41d86242b6e