chrome/browser/ui/webui/ntp/new_tab_ui.cc
@@ -243,7 +243,8 @@ std::string NewTabUI::NewTabHTMLSource::GetContentSecurityPolicyStyleSrc()
 
 std::string NewTabUI::NewTabHTMLSource::GetContentSecurityPolicyImgSrc()
     const {
-  return "img-src chrome-search://thumb chrome-search://thumb2 data:;";
+  return "img-src chrome-search://thumb chrome-search://thumb2 "
+      "chrome-search://theme chrome://theme data:;";
 }
 
 std::string NewTabUI::NewTabHTMLSource::GetContentSecurityPolicyChildSrc()
